--- a/WebUI/Views/Member/Index.cshtml
+++ b/WebUI/Views/Member/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<BrandDto>
+﻿@model List<MemberDto>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -8,7 +8,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-m-12 mb-2">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#dark-header-modal">Yeni Marka Ekle</button>
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#dark-header-modal">Yeni Firma Ekle</button>
                     </div>
                     <div class="col-md-12">
                         <div class="table-responsive">
@@ -16,17 +16,19 @@
                                 <thead>
                                     <tr>
                                         <th>Düzenle</th>
-                                        <th>Marka Adı</th>
+                                        <th>İletişimdeki Kişi</th>
+                                        <th>Firma Adı</th>
                                         <th>Eklenme Tarihi</th>
                                         <th>Pasif Yap</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in Model.OrderByDescending(x => x.CreateDate))
+                                    @foreach (var item in Model)
                                     {
                                         <tr>
                                             <td><button class="btn btn-danger">Güncelle</button></td>
-                                            <td>@item.Name</td>
+                                            <td>@item.Name @item.Surname</td>
+                                            <td>@item.CompanyName</td>
                                             <td>@item.CreateDate</td>
                                             <td><button class="btn btn-info">Pasif Yap</button></td>
                                         </tr>
@@ -44,7 +46,7 @@
 <div id="dark-header-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dark-header-modalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form asp-action="AddBrand" asp-controller="Brand"
+            <form asp-action="AddMember" asp-controller="Member"
                   data-ajax="true" data-ajax-method="POST"
                   data-ajax-success="OnSuccess">
                 <div class="modal-header modal-colored-header bg-dark">
@@ -52,7 +54,20 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
                 </div>
                 <div class="modal-body">
-                    <input type="text" placeholder="Marka Adı" class="form-control" name="Name" />
+                    <div class="row">
+                        <div class="col-md-12 mb-2">
+                            <input type="text" name="Name" class="form-control" placeholder="Kişi Adı" />
+                        </div>
+                        <div class="col-md-12 mb-2">
+                            <input type="text" name="Surname" class="form-control" placeholder="Kişi Soyadı" />
+                        </div>
+                        <div class="col-md-12 mb-2">
+                            <input type="text" name="CompanyName" class="form-control" placeholder="Firma Adı" />
+                        </div>
+                        <div class="col-md-12 mb-2">
+                            <input type="text" name="Email" class="form-control" placeholder="Email Adresi" />
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-dark">Save changes</button>
@@ -64,6 +79,6 @@
 <script>
     function OnSuccess() {
         $('#dark-header-modal').modal('hide');
-         Swal.fire('İşlem Başarılı!', '', 'success')
+        Swal.fire('İşlem Başarılı!', '', 'success')
     }
 </script>
