--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -16,12 +16,11 @@
     <!-- App css -->
     <link href="/assets/css/icons.min.css" rel="stylesheet" type="text/css">
     <link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" id="app-style">
-    <link href="/assets/css/vendor/dataTables.bootstrap5.css" rel="stylesheet" type="text/css">
+   
     <link href="/assets/css/vendor/responsive.bootstrap5.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/vendor/quill.core.css" rel="stylesheet" type="text/css" />
-    <link href="/assets/css/vendor/quill.snow.css" rel="stylesheet" type="text/css" />
-
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+   
+   
 
     @RenderSection("Links",required:false)
 </head>
@@ -57,18 +56,30 @@
                 <!--- Sidemenu -->
                 <ul class="side-nav">
 
-                    @*<li class="side-nav-item">
-                        <a asp-controller="Plant" asp-action="Index" class="side-nav-link">
+                    <li class="side-nav-item">
+                        <a asp-controller="Brand" asp-action="Index" class="side-nav-link">
                             <i class="uil-calender"></i>
-                            <span> Bitkiler </span>
+                            <span> Markalar </span>
                         </a>
                     </li>
                     <li class="side-nav-item">
-                        <a asp-controller="PlantCategory" asp-action="Index" class="side-nav-link">
+                        <a asp-controller="Category" asp-action="Index" class="side-nav-link">
                             <i class="uil-calender"></i>
                             <span> Kategoriler </span>
                         </a>
-                    </li>*@
+                    </li>
+                    <li class="side-nav-item">
+                        <a asp-controller="Product" asp-action="Index" class="side-nav-link">
+                            <i class="uil-calender"></i>
+                            <span> Ürünler </span>
+                        </a>
+                    </li>
+                    <li class="side-nav-item">
+                        <a asp-controller="Member" asp-action="Index" class="side-nav-link">
+                            <i class="uil-calender"></i>
+                            <span> Kullanıcılar </span>
+                        </a>
+                    </li>
 
                 </ul>
                 <div class="clearfix"></div>
@@ -120,32 +131,27 @@
     <div class="rightbar-overlay"></div>
     <!-- /End-bar -->
     <!-- bundle -->
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+     
+      <script src="/assets/js/vendor.min.js"></script>
+      
+      <script src="/assets/js/app.min.js"></script>
     <script src="/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/assets/js/app.min.js"></script>
-    <script src="/assets/js/vendor.min.js"></script>
-    <!-- third party js -->
-    <script src="/assets/js/vendor/apexcharts.min.js"></script>
-    <script src="/assets/js/vendor/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="/assets/js/vendor/jquery-jvectormap-world-mill-en.js"></script>
-    <!-- third party js ends -->
-    <!-- demo app -->
-    <script src="/assets/js/pages/demo.dashboard.js"></script>
-    <script src="/assets/js/vendor/jquery.dataTables.min.js"></script>
-    <script src="/assets/js/vendor/dataTables.bootstrap5.js"></script>
-    <script src="/assets/js/vendor/dataTables.responsive.min.js"></script>
+    
+    
+    
+    
     <script src="/assets/js/vendor/responsive.bootstrap5.min.js"></script>
 
-    <!-- Datatable Init js -->
-    <script src="/assets/js/pages/demo.datatable-init.js"></script>
-    <script src="/assets/js/vendor/quill.min.js"></script>
+   
     <!-- quill Init js-->
-    <script src="/assets/js/pages/demo.quilljs.js"></script>
+   
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+    
     <!-- end demo js-->
+    
     @RenderSection("Scripts",required:false)
 </body>
 </html>
