Basket and Purchase

--- a/WebUI/Views/Category/Index.cshtml
+++ b/WebUI/Views/Category/Index.cshtml
@@ -8,7 +8,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-m-12 mb-2">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#dark-header-modal">Yeni Marka Ekle</button>
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#dark-header-modal">Yeni Kategori Ekle</button>
                     </div>
                     <div class="col-md-12">
                         <div class="table-responsive">
@@ -82,7 +82,7 @@
                    
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-dark">Save changes</button>
+                    <button type="submit" class="btn btn-dark">Kaydet</button>
                 </div>
             </form>
         </div>
