--- a/WebUI/Views/Member/Index.cshtml
+++ b/WebUI/Views/Member/Index.cshtml
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-dark">Save changes</button>
+                    <button type="submit" class="btn btn-dark">Kaydet</button>
                 </div>
             </form>
         </div>
